# eta

./: .gitignore  README.md
ConfigTest/: app.conf  build.sbt
ConfigTest/project/: plugins.sbt
ConfigTest/src/main/eta/: MyIO.hs  eta.cabal
ConfigTest/src/main/scala/example/: Main.scala
sbt-example/: build.sbt
sbt-example/src/main/eta/: eta.cabal
sbt-example/src/main/eta/Example/: MyIO.hs  Transform.hs
sbt-example/src/main/scala/example/: Main.scala
spark/: build.sh  eta-spark.cabal  run.sh
spark-lib/: eta-spark-lib.cabal  publish.sh  run.sh
spark-lib/src/Spark/: Methods.hs  Types.hs
spark-sbt/: data.json
spark-sbt/src/main/scala/example/: Main.scala
spark/src/: Main.hs
spark/src/Spark/: Methods.hs
