name:                eta-spark-lib
version:             0.1
build-type:          Simple
cabal-version:       >=1.10


library
  exposed-modules:   Spark.Types
                     Spark.Methods

  default-extensions:  TypeOperators
                       MagicHash
                       MultiParamTypeClasses
                       FlexibleContexts
                       RankNTypes
                       AllowAmbiguousTypes
                       ScopedTypeVariables
  build-depends:       base >=4.8 && <4.9
                     , ghc-prim
  hs-source-dirs:      src
  default-language:    Haskell2010
