name:                eta
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10

library
  exposed-modules:     MyIO
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.8 && <4.9
                       , aeson
                       , lens-aeson
                       , lens
                       , text
                       , deiko-config
  -- hs-source-dirs:      
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
